<resources>
    <string name="app_name">Cookaholic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="profile_fragment">Profile</string>
    <string name="recipes_item_minutes"> minutes</string>

    // Bottom Sheet
    <string name="category">Kitchens &amp; Dishes</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet">Diet</string>
    <string name="apply">Apply</string>


    <string name="search">Search</string>

    // Details Activity
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="share">Share</string>
    <string name="tabOverview">Overview</string>
    <string name="tabIngredients">Ingredients</string>
    <string name="tabInstructions">Instructions</string>


    // Favorites Activity
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Remove All</string>

    // Login Activity
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_password">Password</string>
    <string name="login_username">User</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="loginPageTitle">Cookaholic</string>
    <string name="loginWrongCredentials">Wrong credentials!</string>
    <string name="errorLoginUser">You need to enter a User.</string>
    <string name="errorLoginPass">You need to enter your Password.</string>

</resources>